# seedance-mcp-server

./: .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml  seedance_mcp_server.py
docs/superpowers/plans/: 2026-06-19-doubao-base-url-design.md
tests/: test_mcp_e2e.py  test_smoke.py  test_uvx_smoke.py
