[project]
name = "seedance-mcp-server"
version = "2.2.2"
description = "Volcengine Doubao MCP server (Seedance fork): text-to-image, text-to-video and image-to-video tools, with configurable DOUBAO_BASE_URL."
authors = [
    {name = "sharpcoder",email = "harpcoder@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.4",
    "requests>=2.31.0",
    "openai>=1.86.0",
]

[project.scripts]
seedance-mcp-server = "seedance_mcp_server:main"

[project.urls]
Homepage = "https://github.com/superproxy/seedance-mcp-server"
Source = "https://github.com/superproxy/seedance-mcp-server"
Issues = "https://github.com/superproxy/seedance-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "seedance_mcp_server.py",
    "__init__.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "seedance_mcp_server.py",
    "__init__.py",
    "README.md",
    "pyproject.toml",
]
